Mon Nov 21 16:19:46 UTC 2011  Brian Johnson  <johnsonb@ociweb.com>

        * ChangeLog:
        * NEWS:
        * README:
        * docs/history/ChangeLog-3.0.1:

          Post release preparation for next release 3.1.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: